k8s/04-App/web-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: fabricioveronez/pedelogo-catalogo:v1.0.0
        ports:
        - containerPort: 80
