k8s/04-App/web-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec: 
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
